Optimize stream operations and replace Collectors.toList() with toList()
Co-authored-by: ItsTheSky <50667548+ItsTheSky@users.noreply.github.com>